# Slots_machine

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
resources/docs/: .~lock.dokumentacja_slots_machine.docx#  zalozenia_projektu
src/: bomb.cpp  bomb.h  cherry.cpp  cherry.h  drum.cpp  drum.h  fruit.cpp  fruit.h  game.cpp  game.h  lemon.cpp  lemon.h  plum.cpp  plum.h  seven.cpp  seven.h  specialsymbol.cpp  specialsymbol.h  symbol.cpp  symbol.h
